<resources>
    <string name="app_name">SocketWearOS</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="aveprompt">Average: 0.0 ms</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="sizeprompt">Data Size:</string>
    <string name="hostname">Enter Hostname</string>
    <string name="port">Enter Port</string>
</resources>