<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/inner_frame_layout_padding"
        android:orientation="vertical">

        <EditText
            android:id="@+id/hostname"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:hint="@string/hostname"
            android:importantForAutofill="no"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/port"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:hint="@string/port"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sizeprompt"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/selectSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/connectButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/connect"
            android:textAlignment="center"
            android:textSize="11sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/averageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aveprompt"
            android:textSize="12sp"
            android:textAlignment="center"/>
    </LinearLayout>

</androidx.wear.widget.BoxInsetLayout>